--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px 35px;
-  background-color: black;
+  background-color: #607e82;
 }
 header a {
   text-decoration: none;
-  color: #fce138;
+  color: #edeef6;
 }
 header nav {
     margin: 7px 0;
@@ -24,14 +29,65 @@ header nav ul {
     font-weight: lighter;
     font-size: 1.55vw;
   }
-header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
+  body {
+    color: #39a6b2;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: #edeef6;
   }
+  
 .hero {
     background-image: url("../images/Coding-body-image.jpg");
-    height: 600px;
+    height: 500px;
     background-size: cover;
     background-position: center;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;   
+}
+.left-row {
+    display: flex;
+    border-right: #012F5F solid;
+    padding-right: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.left-row h2 {
+    margin-right: 20px;
+    text-align: right;
+    }
+  .intro {
+    display: grid;
+    justify-items: center; 
+  }
+  .intro-a {
+    width: 1000px;
+    margin: 3.5%;
+    color: #012F5F;
+    font-size: 18px;
+    line-height: 1.3;
+    display: grid;
+    grid-template-columns: 100px 900px;
+}
+.intro-b {
+    width: 1000px;;
+    margin: 3.5%;
+    color: #012F5F;
+    font-size: 18px;
+    line-height: 1.3;
+    display: grid;
+    grid-template-columns: 100px 900px;
+}
+.intro-c {
+    width: 1000px;    
+    margin: 3.5%;
+    color: #012F5F;
+    font-size: 18px;
+    line-height: 1.3;
+    display: grid;
+    grid-template-columns: 100px 900px;
+}
+.intro p {
+    text-align: left;
+    margin: 2%;
+}
+
