--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,4 +117,24 @@ a:hover {
 a:active {
     text-decoration: none;
 }
+.img-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 200px 200px 200px;
+    grid-column-gap: 10px
+    grid-row-gap: 10px
+    justify-items: stretch
+    align-items: stretch
+}
+img {
+    width: 100%;
+    height: 100%;
+    /* object-fit: cover; */
+}
+#pic-1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
 
