--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,4 +151,14 @@ img {
     grid-row-start: 1;
     grid-row-end: 3;
 }
+.img-grid .pic{
+    transition: 1s ease;
+    }
+    
+.img-grid .pic:hover, .hero div :hover{
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 1s ease;
+    }
 
